@@ -6,6 +6,7 @@
 - framework reads a `/config` file in `plugins`
 - added `RESTBuilder.?.logerror()` method for printing errors into the console
 - added `API.?.logerror()` method for printing errors into the console
+- fixed handling of unexpected problems in the Flow with the main process becoming disconnected
 
 ========================
 0.0.15
